objects/Entitlement_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement__c</fullName>
        <label>Entitlement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Value__c</fullName>
        <label>Priority Value</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Entitlement Field Mapping</label>
    <listViews>
        <fullName>Srishti_View</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Priority_Value__c</columns>
        <columns>Entitlement__c</columns>
        <columns>Case__c</columns>
        <columns>Quote__c</columns>
        <columns>NamespacePrefix</columns>
        <filterScope>Everything</filterScope>
        <label>Srishti View</label>
    </listViews>
    <pluralLabel>Entitlement Field Mappings</pluralLabel>
</CustomObject>